--- a/src/styles/works.scss
+++ b/src/styles/works.scss
@@ -5,9 +5,7 @@
     font-family: "Montserrat", sans-serif;
 }
 
-.works-title { 
-    padding-bottom: $title; 
-}
+.works-title { padding-bottom: $title; }
 
 .works-image {
     margin: 0 auto;
